@@ -1,4 +1,6 @@
 3.5
+	+ Fixed notifyActions by using isIdUsed method and removing
+	  slashes to fetch the observable models
 	+ Fixed spurious warnings when loadings ads and loading dashboard
 	+ Assure that all data under a row directory is removed
 	+ EBox::Types::DomainName always return lowercase values
